--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -36,6 +36,13 @@
     font-family: var(--font-handwritten);
     opacity: 0.8;
 }
+.bottom {
+    position: absolute;
+    font-size: 1.5rem;
+    font-weight: 600;
+    opacity: 0.6;
+    bottom: 4rem;
+}
 
 .code {
     font-weight: 700;
@@ -112,6 +119,10 @@
     .headline {
         font-size: 2.5rem;
         line-height: 2.8rem;
+    }
+    .headline::after {
+        margin-top: 5px;
+        font-size: 0.7rem;
     }
 
     .grid {
