--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,8 @@
     --background-start-rgb: 214, 219, 220;
     --background-end-rgb: 255, 255, 255;
 
-    --background-solid-green: #dfff1f;
+    --background-solid-green: #aeff0b;
+    /* #dfff1f */
 
     --primary-glow: conic-gradient(
         from 180deg at 50% 50%,
