--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,21 +10,9 @@
     --font-handwritten: 'Lemon Tuesday', -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto,
         noto, segoe ui, arial, sans-serif;
     --foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 214, 219, 220;
-    --background-end-rgb: 255, 255, 255;
 
-    --background-solid-green: #aeff0b;
+    --background-solid-green: #c0ff1f;
     /* #dfff1f */
-
-    --primary-glow: conic-gradient(
-        from 180deg at 50% 50%,
-        #16abff33 0deg,
-        #0885ff33 55deg,
-        #54d6ff33 120deg,
-        #0071ff33 160deg,
-        transparent 360deg
-    );
-    --secondary-glow: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
 
     --tile-start-rgb: 239, 245, 249;
     --tile-end-rgb: 228, 232, 233;
